fix overflow

--- a/preview/src/components/select/style.css
+++ b/preview/src/components/select/style.css
@@ -45,7 +45,7 @@
   z-index: 1000;
   top: 100%;
   left: 0;
-  width: 100%;
+  min-width: 100%;
   padding: 0.25rem;
   border-radius: 0.5rem;
   margin-top: 0.25rem;
